<resources>
    <string name="app_name">GlobalDiaryApp</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click To Register</string>
    <string name="logout">Logout</string>
    <string name="choose_file">Choose File</string>
    <string name="diary_entry">Diary Entry</string>
    <string name="upload">Upload</string>
    <string name="show_entries">Show Entries</string>
</resources>